
* ludy executable is added. it simply call rake with ludy tasks, so:
    $ ludy test # to run all tests
    $ ludy doc  # generate rdoc
    $ ludy      # see all ludy tasks

* ludy_ext.rb is split into many other .rb

* C++ ERB meta-programming is added.

* multi re-implementation is done. the new one is called defun.
  it supports overloading(ad-hoc polymorphism), multi-method,
  pattern matching, and perhaps others?

* rdoc support is added.

* http://ludy.rubyforge.org would now insist on the latest rdoc.

== ludy 0.0.9, 2008.01.07

* Proc#bind added, see test/tc_bind.rb

== ludy 0.0.8, 2007.12.06

* ludy_ext:
  added:
    * Array#untranspose!
    * Array#unzip!

  changed:
    * Kernel#curry support Symbol

* puzzle_generator added...

== ludy 0.0.7, 2007.10.08

* ludy_ext:
  added:
    * Array#untranspose
    * Array#unzip
    * Array#combine!
    * Object#m
    * Kernel#id

== ludy 0.0.6, 2007.09.15

* ludy_ext:
  added:
    * Array#combine

  moved:
    * move Symbol#to_proc to Symbol#to_msg,
       and take back the original Symbol#to_proc implementation.

* change the way we require

== ludy 0.0.5, 2007.09.15

 i forgot what i'd done... (days ago)
 but sure there's Symbol#to_proc and Symbol#to_msg,
 also, please read unit test.

== ludy 0.0.4, 2007.08.12

* ludy_ext:
  renamed:
    * Proc#curry => Proc#__curry__

  added:
    * Kernel#curry

 strongly suggest that use Kernel#curry instead of Proc#__curry__,
 see unit test for usage and changes

== ludy 0.0.3, 2007.08.07

* ludy_ext:
  added:
    * Proc#curry
    * Proc#compose
    * Proc#chain
    * Symbol#to_proc
    * Array#foldl
    * Array#foldr
    * Array#filter

  removed:
    * Fixnum#collect # see tc_ludy_ext.rb#test_fixnum_collect for reason

  info:
    * ruby2ruby has NilClass#method_missing return nil,
       so i can't just make it return blackhole

* module Curry:
  see test/tc_curry.rb for usage

 see unit test for usage