@@ -1,9 +1,12 @@
 
+require 'ludy/array/reverse_map'
 require 'ludy/symbol/to_proc'
 require 'ludy/array/foldr'
-require 'ludy/array/reverse_map'
 
 class Array
+  # for each combos
+  # [[0,1],[2,3]].combos
+  # => [[0,2],[0,3],[1,2],[1,3]]
   def combos
     result = []
     radixs = reverse_map(&:size)
