@@ -1,5 +1,6 @@
 
 class Array
+  # synonymy for reverse.map
   def reverse_map &block
     reverse.map(&block)
   end
